# jolie

./: .gitignore  Cargo.toml  plz.toml
.github/workflows/: ci.yml
scripts/: bench-table.py  generate_reference_data.R
src/: constants.rs  error.rs  lib.rs  unchecked.rs
src/distributions/: any.rs  mod.rs  traits.rs
src/distributions/univariate/continuous/: mod.rs
src/distributions/univariate/continuous/exponential/: bench.rs  exponential.rs  mod.rs  test_reference.json
src/distributions/univariate/continuous/gamma/: bench.rs  gamma.rs  mod.rs  test_reference.json
src/distributions/univariate/continuous/lognormal/: bench.rs  lognormal.rs  mod.rs  test_reference.json
src/distributions/univariate/continuous/normal/: bench.rs  normal.rs  test_reference.json
src/distributions/univariate/continuous/uniform/: bench.rs  mod.rs  test_reference.json  uniform.rs
src/distributions/univariate/continuous/weibull/: bench.rs  mod.rs  test_reference.json  weibull.rs
src/distributions/univariate/discrete/: mod.rs
src/distributions/univariate/discrete/discrete_uniform/: bench.rs  discrete_uniform.rs  mod.rs  test_reference.json
src/distributions/univariate/discrete/negative_binomial/: bench.rs  mod.rs  negative_binomial.rs  test_reference.json
src/distributions/univariate/discrete/poisson/: bench.rs  mod.rs  poisson.rs  test_reference.json
src/special/: beta.rs  erf.rs  evaluate.rs  gamma.rs  mod.rs  sampling.rs  ziggurat_tables.rs
src/test_utils/: consistency.rs  edge_cases.rs  evaluation.rs  mod.rs  reference_data.rs  sampling.rs
