[package]
name = "jolie"
version = "0.1.0"
edition = "2024"

[dependencies]
num-traits = "0.2.19"
rand = "0.10.1"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]

[dev-dependencies]
rand_chacha = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
