[package]
name = "jolie"
version = "0.0.1"
edition = "2024"
license = "MIT"

[dependencies]
num-traits = "0.2.19"
rand = "0.10.1"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]

[lib]
bench = false

[dev-dependencies]
criterion = "0.8.2"
rand_chacha = "0.10"
rand_distr = "0.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
statrs = "0.18.0"
# statrs 0.18 samples via rand 0.8; aliased so benches can drive its sampling.
rand08 = { package = "rand", version = "0.8" }

[[bench]]
name = "uniform"
harness = false
path = "src/distributions/univariate/continuous/uniform/bench.rs"

[[bench]]
name = "exponential"
harness = false
path = "src/distributions/univariate/continuous/exponential/bench.rs"

[[bench]]
name = "normal"
harness = false
path = "src/distributions/univariate/continuous/normal/bench.rs"

[[bench]]
name = "lognormal"
harness = false
path = "src/distributions/univariate/continuous/lognormal/bench.rs"

[[bench]]
name = "discrete_uniform"
harness = false
path = "src/distributions/univariate/discrete/discrete_uniform/bench.rs"
